Renamed inventory and added basic menu

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 # Use local inventory file
-inventory = ./hosts
+inventory = ./inventory
 # Increase timeout for SSH connections
 timeout = 20
 # Don’t check RSA fingerprints
