Added SSH keys to host and target

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,15 @@
 [defaults]
 # Use local inventory file
-inventory = ./inventory
+inventory = ./inventory.yml
+
 # Increase timeout for SSH connections
 timeout = 20
+
+# Set python location to avoid warnings
+interpreter_python = /usr/bin/python
+
 # Don’t check RSA fingerprints
-host_key_checking = False
+# host_key_checking = False
+
 # Don’t create retry files on failure
 retry_files_enabled = False
