--- a/inventory.yml
+++ b/inventory.yml
@@ -1,12 +1,21 @@
 ---
 all:
   children:
-    dummygroup:
+    TestGroup2:
       hosts:
         dummy: null
       vars:
-        livestream_enabled: false
-        livestream_url: https://google.com
+        group_url: http://www.google.com
+    TestGroup3:
+      hosts:
+        dummy: null
+      vars:
+        group_url: http://www.google.com
+    testgroep1:
+      hosts:
+        dummy: null
+      vars:
+        group_url: https://www.google.com
   hosts:
     afspeelapparaat1:
       ansible_host: 192.168.1.151
