--- a/inventory.yml
+++ b/inventory.yml
@@ -6,12 +6,26 @@ all:
         dummy: null
       vars:
         TestGroup3_url: http://www.google.com
+    TestGroup4:
+      hosts:
+        dummy: null
+      vars:
+        TestGroup4_url: http://www.google.com
     testgroep1:
       hosts:
         afspeelapparaat1: null
+        afspeelapparaat2: null
       vars:
         testgroep1_url: https://www.google.com
+    testgroep5:
+      hosts:
+        afspeelapparaat2: null
+      vars:
+        testgroep5_url: http://www.google.com
   hosts:
     afspeelapparaat1:
       ansible_host: 192.168.1.151
-      target_url: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_slideshow_auto
+      target_url: https://www.youtube.com/embed/db0A0Jt2Al4?autoplay=1
+    afspeelapparaat2:
+      ansible_host: 192.168.1.152
+      target_url: https://www.youtube.com/embed/db0A0Jt2Al4?autoplay=1
