--- a/inventory.yml
+++ b/inventory.yml
@@ -4,18 +4,14 @@ all:
     testgroep1:
       hosts:
         afspeelapparaat1: null
-        afspeelapparaat2: null
       vars:
         testgroep1_url: https://www.google.com
     testgroep5:
       hosts:
-        afspeelapparaat2: null
+        dummy: null
       vars:
         testgroep5_url: http://www.google.com
   hosts:
     afspeelapparaat1:
       ansible_host: 192.168.1.151
       target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
-    afspeelapparaat2:
-      ansible_host: 192.168.1.152
-      target_url: https://www.youtube.com/embed/db0A0Jt2Al4?autoplay=1
