--- a/inventory.yml
+++ b/inventory.yml
@@ -6,7 +6,39 @@ all:
         afspeelapparaat1: null
       vars:
         testgroep1_url: https://www.google.com
+    testgroep2:
+      hosts:
+        afspeelapparaat2: null
+      vars:
+        testgroep1_url: https://www.google.com
+    testgroep3:
+      hosts:
+        afspeelapparaat1: null
+        afspeelapparaat2: null
+      vars:
+        testgroep1_url: https://www.google.com
   hosts:
     afspeelapparaat1:
       ansible_host: 192.168.1.151
+      target_url: https://www.youtube.com/embed/db0A0Jt2Al4?autoplay=1
+    afspeelapparaat2:
+      ansible_host: 192.168.1.152
+      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
+    afspeelapparaat3:
+      ansible_host: 192.168.1.153
+      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
+    afspeelapparaat4:
+      ansible_host: 192.168.1.154
+      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
+    afspeelapparaat5:
+      ansible_host: 192.168.1.155
+      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
+    afspeelapparaat6:
+      ansible_host: 192.168.1.156
+      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
+    afspeelapparaat7:
+      ansible_host: 192.168.1.157
+      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
+    afspeelapparaat8:
+      ansible_host: 192.168.1.158
       target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
