--- a/inventory.yml
+++ b/inventory.yml
@@ -10,13 +10,13 @@ all:
       hosts:
         afspeelapparaat2: null
       vars:
-        testgroep1_url: https://www.google.com
+        testgroep2_url: https://www.bing.com
     testgroep3:
       hosts:
         afspeelapparaat1: null
         afspeelapparaat2: null
       vars:
-        testgroep1_url: https://www.google.com
+        testgroep3_url: https://www.duckduckgo.com
   hosts:
     afspeelapparaat1:
       ansible_host: 192.168.1.151
