--- a/inventory.yml
+++ b/inventory.yml
@@ -3,42 +3,24 @@ all:
   children:
     testgroep1:
       hosts:
-        afspeelapparaat1: null
+        Democlient1: null
+        dummy: null
       vars:
         testgroep1_url: https://www.acquire.nl
     testgroep2:
       hosts:
-        afspeelapparaat2: null
+        dummy: null
       vars:
         testgroep2_url: https://www.bing.com
     testgroep3:
       hosts:
-        afspeelapparaat1: null
-        afspeelapparaat2: null
+        dummy: null
       vars:
         testgroep3_url: https://www.duckduckgo.com
   hosts:
-    afspeelapparaat1:
+    Democlient1:
       ansible_host: 192.168.1.151
-      target_url: https://www.youtube.com/embed/db0A0Jt2Al4?autoplay=1
-    afspeelapparaat2:
-      ansible_host: 192.168.1.152
-      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
-    afspeelapparaat3:
-      ansible_host: 192.168.1.153
-      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
-    afspeelapparaat4:
-      ansible_host: 192.168.1.154
-      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
-    afspeelapparaat5:
-      ansible_host: 192.168.1.155
-      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
-    afspeelapparaat6:
-      ansible_host: 192.168.1.156
-      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
-    afspeelapparaat7:
-      ansible_host: 192.168.1.157
-      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
-    afspeelapparaat8:
-      ansible_host: 192.168.1.158
-      target_url: https://serverfault.com/questions/1026981/returning-python-script-value-and-using-that-in-the-ansible-task
+      target_url: https://www.acquire.nl
+  vars: 
+    system_on: 730
+    system_off: 1900
